[package]
name = "protohackers-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
bytes = "1.3.0"
nom = "7.1.2"
serde = "1.0.152"
serde_json = "1.0.91"
tokio = {version ="1.24.1" , features=["full"]}
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
